Estilizado calculaora e começando as funçoes basicas

--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -8,6 +8,30 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="calculadora">
+      <div class="tela-valor">
+        <h2 id="valor">0</h2>
+      </div>
+
+      <div class="botao-numeros">
+        <button class="valor-1 number">1</button>
+        <button class="valor-2 number">2</button>
+        <button class="valor-3 number">3</button>
+        <button class="valor-4 number">4</button>
+        <button class="valor-5 number">5</button>
+        <button class="valor-6 number">6</button>
+        <button class="valor-7 number">7</button>
+        <button class="valor-8 number">8</button>
+        <button class="valor-9 number">9</button>
+        <button class="valor-0 number">0</button>
+      </div>
+      <div class="botoes-operacao">
+        <button id="soma" class="number">+</button>
+        <button id="menos" class="number">-</button>
+        <button id="igual" class="number">=</button>
+      </div>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
